# gelo-api

./: .env.local.example  LICENSE  README.md  manage.py  pyproject.toml
app/: main.py  service.py
app/api/: router.py
app/api/common/: auth.py
app/api/gelo/v1/: router.py  schemas.py
app/core/: settings.py
