[tool.poetry]
name = "gelo-api"
version = "0.1.0"
description = ""
authors = ["Danil Maksimov <bazinga.mail@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.0"
uvicorn = "^0.30.1"
llama-cpp-python = "^0.2.79"
huggingface-hub = "^0.23.4"
git-python = "1.0.3"
torch = "^2.3.1"
transformers = "^4.41.2"
openpyxl = "^3.1.4"
RAGatouille = "^0.0.8"
datasets = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "/Users/demaksimov/Library/Caches/pypoetry/virtualenvs"
venv = "gelo-api-zGPypq7T-py3.11"
pythonVersion = "3.10"
